syntax = "proto3";

package kafka.v1;

option go_package = "github.com/muhammadchandra19/exchange/proto/kafka/v1";

message PlaceOrderPayload {
  string order_id = 1 [ json_name = "orderID" ];
  string user_id = 2 [ json_name = "userID" ];
  string type = 3 [ json_name = "type" ];
  bool bid = 4 [ json_name = "bid" ];
  double size = 5 [ json_name = "size" ];
  double price = 6 [ json_name = "price" ];
  int64 offset = 7 [ json_name = "offset" ];
}
